--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "@octokit/rest": "^20.0.2",
     "axios": "^1.6.0",
     "node-fetch": "^3.3.2"
   }
